--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <article class="card_uno card-hover">
                 <a href="pages/about.html" target="_blank">
                     <div class="card card_font card_one" style="width: 18rem;">
-                        <img src="resources/placeholder-uno.jpg" class="card-img-top card_img" alt="...">
+                        <img src="resources/me.png" class="card-img-top card_img" alt="...">
                         <div class="card-body">
                             <a href="pages/about" target="_blank" class="card_one"><h2 class="card-text ">Sobre mi</h2></a>
                         </div>
@@ -88,11 +88,11 @@
                     </div>
                 </a>
             </article>
-            <article class="card_seis">
+            <article class="card_seis card-hover">
                 <div class="card card_font card_six" style="width: 18rem;">
-                    <img src="resources/mensajes-ang.jpg" class="card-img-top card_img" alt="...">
+                    <img src="resources/snake.png" class="card-img-top card_img card_img_six" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text"></h2>
+                        <a href="pages/reiki.html" target="_blank" class="card_six"><h2 class="card-text card_six_text">Reiki</h2></a>
                     </div>
                 </div>
             </article>
