--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,6 +40,9 @@
                             <a class="nav-link font-color separator nav-reg" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color page_active nav-reg" href="contacto.html">CONTACTAME</a>
                         </li>
                     </ul>
@@ -48,23 +51,23 @@
         </nav>
     </header>
     <main>
-        <div class="max-container mns-ang">
+        <div class="max-container">
             <div class="card-main">
                 <img src="../resources/talleres.jfif" class="msnj-img img-fluid rounded-start" alt="">
                 <div class="card-body card-reg">
                     <h1 class="card-title">Ponete en contacto conmigo</h1>
                     <div >
                         <div class="card-contacto">
-                            <a href=""><img src="../resources/instagram.png" alt="" class="redes"></a>
-                            <a href=""><p class="mensj-ange text-cont">  @amrita.espaciodeluz</p></a>
+                            <a href="https://www.instagram.com/amrita.espaciodeluz/"><img src="../resources/instagram.png" alt="" class="redes"></a>
+                            <a href="https://www.instagram.com/amrita.espaciodeluz/"><p class="mensj-ange text-cont">  @amrita.espaciodeluz</p></a>
                         </div>
                         <div class="card-contacto">
                             <img src="../resources/mail.png" alt="" class="redes">
-                            <p class="mensj-ange text-cont">  mail@gmail.com</p>
+                            <p class="mensj-ange text-cont">  fernandezmariaeujenia000@gmail.com</p>
                         </div>
                         <div class="card-contacto">
                             <img src="../resources/wpp.png" alt="" class="redes">
-                            <p class="mensj-ange text-cont">  (+54)3476...</p>
+                            <p class="mensj-ange text-cont">  (+54)3476697260</p>
                         </div>
                     </div>
                 </div>
