--- a/pages/reiki.html
+++ b/pages/reiki.html
@@ -25,25 +25,25 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link separator nav_reg" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item page_active">
-                            <a class="nav-link font-color nav_link page_active separator nav_reg" href="#">REGISTROS AKÁSHICOS</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link separator nav_reg" href="tarot.html">Tarot Evolutivo</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link separator nav_reg" href="mensajes.html">Mensajes Angelicos</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="tarot.html">Tarot Evolutivo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link separator nav_reg" href="talleres.html">Talleres</a>
+                            <a class="nav-link font-color  separator nav-mnsj" href="mensajes.html">Mensajes Angelicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link nav_reg" href="contacto.html">Contactame</a>
+                            <a class="nav-link font-color page_active separator nav-mnsj" href="reiki.html">REIKI</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link font-color nav-mnsj" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
                 </div>
@@ -51,22 +51,17 @@
         </nav>
     </header>
     <main>
-        <main>
-            <div class="max-container">
-                <div class="card-main">
-                    <img src="../resources/registros-uno.jfif" class="msnj-img img-fluid rounded-start" alt="">
-                    <div class="card-body card-regs">
-                        <h1 class="card-title">Registros Akáshicos</h1>
-                        <p class="regis-ak bold">¿Que son los Registros Akáshicos?</p>
-                        <p class="regis-ak"> Son una puerta de entrada a nuestra interioridad. A nuestra alma. Una forma diferente para saber más sobre uno mismo. Son las memorias del alma, donde se guardan los archivos que contienen la historia de toda la existencia.</p>
-                        <p class="regis-ak bold">¿Que ocurre al abrir tu Registro Akáshico?</p>
-                        <p class="regis-ak">Al abrir tu Registro te encontraras con conocimientos sobre el pasado y presente, esperiencias del viaje que tu alma hizo desde el inicio de los tiempos hasta el momento presente</p>
-                        <p>$$$$</p>
-                        <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20una%20lectura%20de%20registros%20Akashicos" target="_blank" class="btn  boton">Quiero </a>
-                    </div>
+        <div class="max-container">
+            <div class="card-main">
+                <img src="../resources/reiki.jpg" class="msnj-img img-fluid rounded-start" alt="">
+                <div class="card-body card-mnsj">
+                    <h1 class="card-title">Reiki y alineacion de Chakras</h1>
+                    <p class="mensj-ange">Con esta terapia a distancia, podrás volver a tu eje, conectarte con tu alma. También se trabaja con símbolos angélicos, energía de Jesús y Madre María</p>
+                    <p class="mensj-ange">$1100</p>
+                    <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20reiki%20a%20distancia" class="btn btn-reiki boton">Quiero!</a>
                 </div>
             </div>
-        </main>
+        </div>
     </main>
     <footer>
 
