--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -40,6 +40,9 @@
                             <a class="nav-link font-color page_active separator nav-tarot" href="talleres.html">TALLERES</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color nav-tarot" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
@@ -48,15 +51,16 @@
         </nav>
     </header>
     <main>
-        <div class="max-container mns-ang">
+        <div class="max-container">
             <div class="card-main">
                 <img src="../resources/talleres.jfif" class="msnj-img img-fluid rounded-start" alt="">
                 <div class="card-body card-tarot">
-<!--                     <h1 class="card-title">Proximo Taller</h1>
-                    <p class="mensj-ange">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
-                    <p>$$$$</p>
-                    <a href="#" class="btn btn-taller boton">Quiero </a> -->
-                    <h1 class="card-title tall-prox">Proximamente estaremos anunciando nuevas fechas!</h1>
+                    <h1 class="card-title">Proximo Taller - CAMINO DEL ALMA</h1>
+                    <p class="mensj-ange bold">Sábado 3/05 - 10HS ARG.</p>
+                    <p class="mensj-ange">Taller sobre despertar de conciencia. PAra quie inicia su camino evolutivo. Compartiendoesperiencias. Algunas herramientas para continuar.</p>
+                    <p class="mensj-ange bold">DURACION APROXIMADA: 90 minutos</p>
+                    <p>$15000</p>
+                    <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20inscribirme%20en%20el%20próximo%20taller" class="btn btn-taller boton">Inscribirme</a>
                 </div>
             </div>
         </div>
