--- a/pages/tarot.html
+++ b/pages/tarot.html
@@ -40,6 +40,9 @@
                             <a class="nav-link font-color separator nav-tarot" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color nav-tarot" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
@@ -54,39 +57,24 @@
                 <div class="card-body card-tarot">
                     <h1 class="card-title">Tarot Evolutivo</h1>
                     <p class="tar bold">¿En que consiste?</p>
-                    <p class="tar">Se realiza una tirada de tres cartas del Tarot Evolutivo, donde los Seres de Luz se comunican para iluminar tu camino evolutivo en el Aquí y Ahora. Tambien se realiza una canalizacion de un mensaje personalizado donde se le da un cierre a la tirada de cartas</p>
-                    <p class="tar bold">¿Que tipos de Seres podes elegir?</p>
-                    <p>Animales de poder: </p>
-                    <p>Madre Maria: </p>
-                    <p>Angeles Nueva Era: </p>
-                    <p>$$$$</p>
-                    <!-- <a href="#" class="btn btn-tarot boton">Quiero </a> -->
+                    <p class="tar">Se realiza una tirada de tres cartas del Tarot Evolutivo, donde los Seres de Luz se comunican para iluminar tu camino evolutivo en el Aquí y Ahora. Tambien se realiza una canalizacion de un mensaje personalizado donde se le da un cierre a la tirada de cartas.
+                        El mazo consta de doce cartas, cada una de llas, se relaciona con un ser de luz. Este te acompañara para ayudarte a resolver las situaciones cotidianas que se te presenten.
+                    </p>
+                    <p>$1000</p>
+                    <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20una%20tirada%20de%20tarot%20evolutivo" target="_blank" class="btn btn-tarot boton">Quiero </a>
                 </div>
             </div>
         </div>
-        <div class="container option-container">
-            <div class="card container col-4 col-sm-12 tarot-option" style="width: 18rem;">
-                <img src="../resources/animales-poder.jfif" class="card-img-top option-img" alt="...">
+        <div class="max-container">
+            <div class="card-main">
+                <img src="../resources/tarot.jpg" class="tarot_img img-fluid rounded-start" alt="">
                 <div class="card-body card-tarot">
-                    <h5 class="card-title">Animales de Poder</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-tarot">Quiero!</a>
-                </div>
-            </div>
-            <div class="card container col-4 col-sm-12 tarot-option" style="width: 18rem;">
-                <img src="../resources/madre-maria.jfif" class="card-img-top option-img" alt="...">
-                <div class="card-body card-tarot">
-                    <h5 class="card-title">Madre Maria</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-tarot">Quiero!</a>
-                </div>
-            </div>
-            <div class="card container col-4 col-sm-12 tarot-option" style="width: 18rem;">
-                <img src="../resources/angeles-nueva.jfif" class="card-img-top option-img" alt="...">
-                <div class="card-body card-tarot">
-                    <h5 class="card-title">Angeles Nueva Era</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-tarot">Quiero!</a>
+                    <h1 class="card-title">Otors mensajes</h1>
+                    <p><b>Animales de poder:</b> Te brindan la energia necesaria para clarificar el camino a seguir. Aparecen en tu vida para recordarte lo poderoso y valioso que eres</p>
+                    <p><b>Madre Maria:</b> Maria te abraza, te envuelve en su manto y atraves de su mensaje e expresa su amor su energia y misericordia.</p>
+                    <p><b>Angeles Nueva Era:</b> Los angeles que hoy se comunican contigo, te recuerdan las herramientas que posees paraa podeer transitar de manera consciente tu paso a la quinta dimension</p>
+                    <p>$500 - Las tres cartas</p>
+                    <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20una%20tirada%20de%20seres%20de%20poder" target="_blank" class="btn btn-tarot boton">Quiero </a>
                 </div>
             </div>
         </div>
