--- a/pages/mensajes.html
+++ b/pages/mensajes.html
@@ -40,6 +40,9 @@
                             <a class="nav-link font-color separator nav-mnsj" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color nav-mnsj" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
