--- a/index.html
+++ b/index.html
@@ -89,12 +89,14 @@
                 </a>
             </article>
             <article class="card_seis card-hover">
-                <div class="card card_font card_six" style="width: 18rem;">
-                    <img src="resources/snake.png" class="card-img-top card_img card_img_six" alt="...">
-                    <div class="card-body">
-                        <a href="pages/reiki.html" target="_blank" class="card_six"><h2 class="card-text card_six_text">Reiki</h2></a>
+                <a href="pages/reiki.html" target="_blank">
+                    <div class="card card_font card_six" style="width: 18rem;">
+                        <img src="resources/snake.png" class="card-img-top card_imgseis" alt="...">
+                        <div class="card-body">
+                            <a href="pages/reiki.html" target="_blank" class="card_six"><h2 class="card-text card_six_text">Reiki</h2></a>
+                        </div>
                     </div>
-                </div>
+                </a>
             </article>
             <article class="card_siete card-hover">
                 <a href="pages/contacto.html" target="_blank">
