--- a/pages/about.html
+++ b/pages/about.html
@@ -28,6 +28,9 @@
                             <a class="nav-link font-color separator nav-mnsj" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator page_active nav-mnsj" href="../pages/about.html">SOBRE MI</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color separator nav-mnsj" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
@@ -53,13 +56,13 @@
     <main>
         <div class="max-container">
             <div class="card-main">
-                <img src="../resources/about.jfif" class="tarot_img img-fluid rounded-start" alt="">
+                <img src="../resources/about.png" class="tarot_img img-fluid rounded-start" alt="">
                 <div class="card-body card-mnsj">
                     <h1 class="card-title">Sobre Mi</h1>
                     <p>Hola! Me presento, Soy Maria Eugenia Fernandez, terapeuta Holística.</p>
-                    <p>Este es un espacio para que puedas encontrar tu poder interior. Descubre quien eres en realidad. Vence los miedos, quita las barreras, disfruta de la libertad del ser. Quiero ayudarte a encontrar la conexion con la DIVINIDAD que habita en ti. Tu universo interno se expresa, escuchalo. Ningun ser externo a ti es tu MAESTRO. TÚ si lo eres</p>
+                    <p>Este es un espacio para que puedas encontrar tu poder interior. Descubre quien eres en realidad. Vence los miedos, quita las barreras, disfruta de la libertad del ser. Quiero ayudarte a encontrar la conexión con la DIVINIDAD que habita en ti. Tu universo interno se expresa, escuchalo. Ningún ser externo a ti es tu MAESTRO. TÚ sí lo eres.</p>
                     <p>Ofrezco mis servicios como canalizadora en los Registros Akáshicos, Tarot Evolutivo y mensajes Angélicos.</p>
-                    <p class="bold"> ✨Encuntra tu poder y vive en plenitud✨</p>
+                    <p class="bold"> ✨Encuentra tu poder y vive en plenitud✨</p>
                 </div>
             </div>
         </div>
