--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,6 +28,9 @@
                             <a class="nav-link font-color separator nav-reg" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-reg" href="../pages/about.html">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color separator nav-reg" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
@@ -40,7 +43,7 @@
                             <a class="nav-link font-color separator nav-reg" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                            <a class="nav-link font-color separator nav-reg" href="reiki.html">Reiki</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link font-color page_active nav-reg" href="contacto.html">CONTACTAME</a>
