--- a/pages/registros.html
+++ b/pages/registros.html
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link font-color nav_link separator nav_reg" href="../index.html">Inicio</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link font-color separator nav_reg" href="../pages/about.html">Sobre Mi</a>
+                        </li>
                         <li class="nav-item page_active">
                             <a class="nav-link font-color nav_link page_active separator nav_reg" href="#">REGISTROS AKÁSHICOS</a>
                         </li>
@@ -40,7 +43,7 @@
                             <a class="nav-link font-color nav_link separator nav_reg" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                            <a class="nav-link font-color nav_link separator nav_reg" href="reiki.html">Reiki</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link font-color nav_link nav_reg" href="contacto.html">Contactame</a>
@@ -54,14 +57,14 @@
         <main>
             <div class="max-container">
                 <div class="card-main">
-                    <img src="../resources/registros-uno.jfif" class="msnj-img img-fluid rounded-start" alt="">
+                    <img src="../resources/registros.png" class="msnj-img img-fluid rounded-start" alt="">
                     <div class="card-body card-regs">
                         <h1 class="card-title">Registros Akáshicos</h1>
-                        <p class="regis-ak bold">¿Que son los Registros Akáshicos?</p>
+                        <p class="regis-ak bold">¿Qué son los Registros Akáshicos?</p>
                         <p class="regis-ak"> Son una puerta de entrada a nuestra interioridad. A nuestra alma. Una forma diferente para saber más sobre uno mismo. Son las memorias del alma, donde se guardan los archivos que contienen la historia de toda la existencia.</p>
-                        <p class="regis-ak bold">¿Que ocurre al abrir tu Registro Akáshico?</p>
-                        <p class="regis-ak">Al abrir tu Registro te encontraras con conocimientos sobre el pasado y presente, esperiencias del viaje que tu alma hizo desde el inicio de los tiempos hasta el momento presente</p>
-                        <p>$$$$</p>
+                        <p class="regis-ak bold">¿Qué ocurre al abrir tu Registro Akáshico?</p>
+                        <p class="regis-ak">Al abrir tu Registro te encontrarás con conocimientos sobre el pasado y presente, experiencias del viaje que tu alma hizo desde el inicio de los tiempos hasta el momento presente</p>
+                        <p>$2500</p>
                         <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20una%20lectura%20de%20registros%20Akashicos" target="_blank" class="btn  boton">Quiero </a>
                     </div>
                 </div>
