--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -28,6 +28,9 @@
                             <a class="nav-link font-color separator nav-tarot" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-tarot" href="../pages/about.html">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color separator nav-tarot" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
@@ -40,7 +43,7 @@
                             <a class="nav-link font-color page_active separator nav-tarot" href="talleres.html">TALLERES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                            <a class="nav-link font-color separator nav-tarot" href="reiki.html">Reiki</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link font-color nav-tarot" href="contacto.html">Contactame</a>
@@ -55,11 +58,12 @@
             <div class="card-main">
                 <img src="../resources/talleres.jfif" class="msnj-img img-fluid rounded-start" alt="">
                 <div class="card-body card-tarot">
-                    <h1 class="card-title">Proximo Taller - CAMINO DEL ALMA</h1>
+                    <h1 class="card-title">Camino del alma I</h1>
+                    <p class="mensj-ange bold">PRÓXIMO TALLER</p>
                     <p class="mensj-ange bold">Sábado 3/05 - 10HS ARG.</p>
-                    <p class="mensj-ange">Taller sobre despertar de conciencia. PAra quie inicia su camino evolutivo. Compartiendoesperiencias. Algunas herramientas para continuar.</p>
+                    <p class="mensj-ange">Taller sobre despertar de conciencia. Para quien inicia su camino evolutivo. Compartiendo experiencias. Algunas herramientas para continuar.</p>
                     <p class="mensj-ange bold">DURACION APROXIMADA: 90 minutos</p>
-                    <p>$15000</p>
+                    <p>$1500</p>
                     <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20inscribirme%20en%20el%20próximo%20taller" class="btn btn-taller boton">Inscribirme</a>
                 </div>
             </div>
