--- a/pages/tarot.html
+++ b/pages/tarot.html
@@ -28,6 +28,9 @@
                             <a class="nav-link font-color separator nav-tarot" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-tarot" href="../pages/about.html">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color separator nav-tarot" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
@@ -40,7 +43,7 @@
                             <a class="nav-link font-color separator nav-tarot" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-mnsj" href="reiki.html">Reiki</a>
+                            <a class="nav-link font-color separator nav-tarot" href="reiki.html">Reiki</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link font-color nav-tarot" href="contacto.html">Contactame</a>
@@ -53,12 +56,12 @@
     <main>
         <div class="max-container">
             <div class="card-main">
-                <img src="../resources/tarot.jpg" class="tarot_img img-fluid rounded-start" alt="">
+                <img src="../resources/tarot.png" class="tarot_img img-fluid rounded-start" alt="">
                 <div class="card-body card-tarot">
                     <h1 class="card-title">Tarot Evolutivo</h1>
-                    <p class="tar bold">¿En que consiste?</p>
-                    <p class="tar">Se realiza una tirada de tres cartas del Tarot Evolutivo, donde los Seres de Luz se comunican para iluminar tu camino evolutivo en el Aquí y Ahora. Tambien se realiza una canalizacion de un mensaje personalizado donde se le da un cierre a la tirada de cartas.
-                        El mazo consta de doce cartas, cada una de llas, se relaciona con un ser de luz. Este te acompañara para ayudarte a resolver las situaciones cotidianas que se te presenten.
+                    <p class="tar bold">¿En qué consiste?</p>
+                    <p class="tar">Se realiza una tirada de tres cartas del Tarot Evolutivo, donde los Seres de Luz se comunican para iluminar tu camino evolutivo en el Aquí y Ahora. También se realiza una canalización de un mensaje personalizado donde se le da un cierre a la tirada de cartas. El mazo consta de doce cartas, cada una de ellas, se relaciona con un ser de luz. 
+                        Este te acompañara para ayudarte a resolver las situaciones cotidianas que se te presenten.
                     </p>
                     <p>$1000</p>
                     <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20una%20tirada%20de%20tarot%20evolutivo" target="_blank" class="btn btn-tarot boton">Quiero </a>
@@ -67,12 +70,12 @@
         </div>
         <div class="max-container">
             <div class="card-main">
-                <img src="../resources/tarot.jpg" class="tarot_img img-fluid rounded-start" alt="">
+                <img src="../resources/tarotdos.png" class="tarot_img img-fluid rounded-start" alt="">
                 <div class="card-body card-tarot">
-                    <h1 class="card-title">Otors mensajes</h1>
-                    <p><b>Animales de poder:</b> Te brindan la energia necesaria para clarificar el camino a seguir. Aparecen en tu vida para recordarte lo poderoso y valioso que eres</p>
-                    <p><b>Madre Maria:</b> Maria te abraza, te envuelve en su manto y atraves de su mensaje e expresa su amor su energia y misericordia.</p>
-                    <p><b>Angeles Nueva Era:</b> Los angeles que hoy se comunican contigo, te recuerdan las herramientas que posees paraa podeer transitar de manera consciente tu paso a la quinta dimension</p>
+                    <h1 class="card-title">Otros mensajes</h1>
+                    <p><b>Animales de poder:</b> Te brindan la energía necesaria para clarificar el camino a seguir. Aparecen en tu vida para recordarte lo poderoso y valioso que eres</p>
+                    <p><b>Madre Maria:</b> Maria te abraza, te envuelve en su manto y a través de su mensaje expresa su amor, su energía y misericordia.</p>
+                    <p><b>Ángeles Nueva Era:</b> Los angeles que hoy se comunican contigo, te recuerdan las herramientas que posees para poder transitar de manera consciente tu paso a la quinta dimensión.</p>
                     <p>$500 - Las tres cartas</p>
                     <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20una%20tirada%20de%20seres%20de%20poder" target="_blank" class="btn btn-tarot boton">Quiero </a>
                 </div>
