--- a/pages/mensajes.html
+++ b/pages/mensajes.html
@@ -28,6 +28,9 @@
                             <a class="nav-link font-color separator nav-mnsj" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-mnsj" href="../pages/about.html">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color separator nav-mnsj" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
@@ -53,11 +56,11 @@
     <main>
         <div class="max-container mns-ang">
             <div class="card-main">
-                <img src="../resources/mensajes-ang.jfif" class="msnj-img img-fluid rounded-start" alt="">
+                <img src="../resources/mnsj.png" class="msnj-img img-fluid rounded-start" alt="">
                 <div class="card-body card-mnsj">
                     <h1 class="card-title">Mensajes Angélicos</h1>
                     <p class="mensj-ange bold">Beneficios de recibir un Mensaje Angelico</p>
-                    <p class="mensj-ange">Los Angeles se comunican de diferentes formas, para que tu camino evolutivo sea más fácil. Lo importante es estar muy atento a las señales. En Amrita podras recibir un mensaje Angélico que reconforte y guíe tu alma</p>
+                    <p class="mensj-ange">Los Ángeles se comunican de diferentes formas, para que tu camino evolutivo sea más fácil. Lo importante es estar muy atento a las señales. En Amrita podrás recibir un mensaje Angélico que reconforte y guíe tu alma.</p>
                 </div>
             </div>
         </div>
