--- a/pages/reiki.html
+++ b/pages/reiki.html
@@ -28,6 +28,9 @@
                             <a class="nav-link font-color separator nav-mnsj" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link font-color separator nav-mnsj" href="../pages/about.html">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link font-color separator nav-mnsj" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
@@ -51,14 +54,26 @@
         </nav>
     </header>
     <main>
-        <div class="max-container">
-            <div class="card-main">
+<!--         <div class="max-container mns-ang">
+            <div class="card-main main">
                 <img src="../resources/reiki.jpg" class="msnj-img img-fluid rounded-start" alt="">
                 <div class="card-body card-mnsj">
                     <h1 class="card-title">Reiki y alineacion de Chakras</h1>
                     <p class="mensj-ange">Con esta terapia a distancia, podrás volver a tu eje, conectarte con tu alma. También se trabaja con símbolos angélicos, energía de Jesús y Madre María</p>
                     <p class="mensj-ange">$1100</p>
                     <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20reiki%20a%20distancia" class="btn btn-reiki boton">Quiero!</a>
+                </div>
+            </div>
+        </div> -->
+        <div class="max-container mns-ang">
+            <div class="card-main">
+                <img src="../resources/reiki.png" class="reiki-img img-fluid rounded-start" alt="">
+                <div class="card-body card-mnsj">
+                    <h1 class="card-title">Reiki a distancia y alineación de chakras</h1>
+                    <p class="mensj-ange bold">¿Para qué sirven?</p>
+                    <p class="mensj-ange">Con esta terapia a distancia, podrás volver a tu eje, conectarte con tu alma. También se trabaja con símbolos angélicos, energía de Jesús y Madre María</p>
+                    <p class="mensj-ange">$1100</p>
+                    <a href="https://wa.me/5493476697260?text=Hola%20Euge!%20quiero%20pedirte%20reiki%20a%20distancia" class="btn btn-reiki boton" target="_blank">Quiero!</a>
                 </div>
             </div>
         </div>
